--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -310,14 +310,11 @@
           </mat-card>
         </div>
 
-
-
-
       </div>
 
 
 
       <!-- {{cateGory | json}} -->
 
-      {{chartDataPoints | json}}
-      {{allUsers | json}}
+      <!-- {{chartDataPoints | json}}
+      {{allUsers | json}} -->
