--- a/src/app/pages/user/instructions/instructions.component.html
+++ b/src/app/pages/user/instructions/instructions.component.html
@@ -60,9 +60,10 @@ text="Loading instructions"
                             <button mat-raised-button color="primary" class="" (click)="startQuiz()">Start Quiz</button>
                         </div>
 
-                        <div class=" container text-center" *ngIf="isLegible">
+                        <div class=" container text-center" *ngIf="!isLegible">
                             <button mat-raised-button color="accent" class="">Quiz Completed</button>
                         </div>
+
                         <!-- Action -->
                     </mat-card-actions>
 
