--- a/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
+++ b/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
@@ -1,4 +1,7 @@
+<!-- {{questions |json}} -->
+
 <h1 class="mt20">{{qTitle}} Questions </h1>
+
 
 <div class="bootstrap-wrapper">
     <div class="row">
@@ -34,7 +37,7 @@
     </div>
     <mat-divider></mat-divider>
     <p class="mt10">
-        <b>Correct Answer:</b> {{q.answer}}
+        <b>Correct Answer(s):</b> {{q.correct_answer}}
     </p>
 </div>      
 </mat-card-content>
