--- a/src/app/pages/user/print-quiz/print-quiz.component.css
+++ b/src/app/pages/user/print-quiz/print-quiz.component.css
@@ -17,7 +17,7 @@
     }
     #marks{
         line-height: 12px;
-        border: 2px,solid, #000;
+        border: 3px,solid, #000000;
         padding: 10px; 
     }
 
@@ -26,8 +26,8 @@
         font-size: large;
     }
 
-
-    /* .watermark {
+/* 
+    .watermark {
         position: fixed;
         top: 50%;
         left: 50%;
@@ -35,5 +35,5 @@
         font-size: 24px;
         color: rgba(0, 0, 0, 0.3); 
         pointer-events: none; 
-      } */
-      
+      } 
+       */
