--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -1,4 +1,6 @@
-<!-- {{questionss|json}} -->
+
+<!-- {{questionWithAnswers | json}} -->
+<!-- {{questionss | json}} -->
 
 <ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
     text="Loading information!"></ngx-ui-loader>
@@ -45,9 +47,6 @@
 
                 </div>
 
-
-                <!-- questions -->
-
                 <div class="col-md-8">
 
                     <ng-container>
@@ -59,7 +58,7 @@
                         *ngFor="let q of questions| paginate:{itemsPerPage: tableSize, currentPage:page, totalItems:count}; let i = index"
                         class="mt10">
 
-                        <mat-card-content>
+                        <!-- <mat-card-content>
                             <div class="row">
                                 <div class="col-md-11">
                                     <p> <b> Q {{q.count}} </b> <span class="ml10" [innerHTML]="q.content"></span>
@@ -97,8 +96,58 @@
                                 </div>
                             </div>
                         </mat-card-content>
-                    </mat-card>
+                    </mat-card> -->
 
+
+
+                    <!-- MULTIPLE SELECTIONS STARTS -->
+
+                    <mat-card-content>
+                        <div class="row">
+                            <div class="col-md-11" >
+                                <p> <b> Q {{q.count}} </b> <span class="ml10" [innerHTML]="q.content"></span> </p>
+                            </div>
+                    
+                            <!-- <div class="col-md-1" *ngIf="q.givenAnswer">
+                                <mat-checkbox class="example-margin" checked disabled></mat-checkbox>
+                            </div> -->
+                        </div>
+                    
+                        <mat-divider></mat-divider>
+                        <br />
+
+
+                        <div class="row mt20">
+                            <div class="col-md-6">
+                                <mat-checkbox 
+                                [checked]="q.givenAnswer.includes(q.option1)" 
+                                (change)="updateSelectedAnswers(q, q.option1, $event.checked)"> {{q.option1}} </mat-checkbox>
+                            </div>
+                            <div class="col-md-6">
+                                <mat-checkbox 
+                                [checked]="q.givenAnswer.includes(q.option2)"
+                                (change)="updateSelectedAnswers(q, q.option2, $event.checked)"> {{q.option2}} </mat-checkbox>
+                            </div>
+                            <div class="col-md-6">
+                                <mat-checkbox 
+                                [checked]="q.givenAnswer.includes(q.option3)"
+                                (change)="updateSelectedAnswers(q, q.option3, $event.checked)"> {{q.option3}} </mat-checkbox>
+                            </div>
+                            <div class="col-md-6">
+                                <mat-checkbox [checked]="q.givenAnswer.includes(q.option4)"
+                                (change)="updateSelectedAnswers(q, q.option4, $event.checked)"> {{q.option4}} </mat-checkbox>
+                            </div>
+                        </div>
+                    </mat-card-content>
+                    <!-- MULTIPLE SELECTIONS ENDS -->
+
+
+
+
+
+
+
+                    </mat-card>
                     <!-- PAGINATION -->
                     <div>
                         <pagination-controls previousLabel="Prev" nextLabel="Next"
@@ -163,70 +212,40 @@
                     </div>
                 </div>
 
-                <mat-card *ngFor="let qA of questionWithAnswers; let i = index" class="mt10">
+                <!-- <mat-card *ngFor="let qA of questionWithAnswers; let i = index" class="mt10">
 
                     <mat-card-content>
                         <p> <b> Q {{ i + 1}} </b> <span class="ml10" [innerHTML]="qA.content"></span></p>
                         <mat-divider></mat-divider>
                         <br />
 
-                        <!-- Worked like magic -->
+                        Worked like magic 
 
                         <div class="row mt20">
                             <div class="col-md-6">
-                                <input type="checkbox" [checked]="qA.option1 == qA.answer" disabled />
+                                <input type="checkbox" [checked]="qA.option1 == qA.correct_answer[i]" disabled />
                                 {{qA.option1}}
                             </div>
 
                             <div class="col-md-6">
-                                <input type="checkbox" [name]="i" [checked]="qA.option2 == qA.answer" disabled />
+                                <input type="checkbox" [name]="i" [checked]="qA.option2 == qA.correct_answer[i]" disabled />
                                 {{qA.option2}}
                             </div>
                             <div class="col-md-6">
-                                <input type="checkbox" [checked]="qA.option3 == qA.answer" disabled />
+                                <input type="checkbox" [checked]="qA.option3 == qA.correct_answer[i]" disabled />
                                 {{qA.option3}}
                             </div>
 
                             <div class="col-md-6">
-                                <input type="checkbox" [checked]="qA.option4 == qA.answer" disabled />
+                                <input type="checkbox" [checked]="qA.option4 == qA.correct_answer[i]" disabled />
                                 {{qA.option4}}
 
                             </div>
+                            </div>
 
-
-
-
-                            <!-- 
-        <div class="col-md-6"  *ngIf="qA.answer==qA.option1">
-        <input type="checkbox" checked disabled>
-            {{qA.option1}}
-        </div> 
-        
-        <div class="col-md-6" *ngIf="qA.answer==qA.option2">
-         <input type="checkbox" checked disabled>
-             {{qA.option2}}
-         </div> 
-         
-         <div class="col-md-6"  *ngIf="qA.answer==qA.option3">
-         <input type="checkbox" checked disabled>
-             {{qA.option3}}
-         </div> 
-         
-         <div class="col-md-6"  *ngIf="qA.answer==qA.option4">
-         <input type="checkbox" checked disabled>
-             {{qA.option4}}
-         </div>  -->
-
-
-                        </div>
                     </mat-card-content>
-                </mat-card>
-                <!-- <mat-card-actions>
-    <div class="container text-center">
-    <button (click)="printPage()" mat-raised-button color="accent">Print</button>
-    <button mat-raised-button  color="primary" class="ml10" routerLink="/user-dashboard/0">Home</button>
-</div>
-   </mat-card-actions> -->
+                </mat-card> -->
+                
             </div>
         </div>
     </div>
