--- a/src/app/pages/admin/add-quiz/add-quiz.component.html
+++ b/src/app/pages/admin/add-quiz/add-quiz.component.html
@@ -70,11 +70,55 @@
 
 
 
-
-
+<div class="row">
+    <div class="col-md-6">
 <mat-slide-toggle name="active" [(ngModel)] = "quizData.active"
 class="mb20" 
 > Publish Status</mat-slide-toggle>
+</div>
+
+<div class="col-md-6">
+    Quiz date:DD-MM-YYYY | Time: 00:00
+
+<div class="row">
+
+    <div class="col-md-6">
+        <!-- <mat-form-field class="w100" appearance="fill">
+            <mat-label>Quiz Date</mat-label>
+            <input [(ngModel)]="quizData.quizTime" matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field> -->
+
+          <mat-form-field>
+            <mat-label>Quiz Date</mat-label>
+            <input matInput [matDatepicker]="picker">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+          
+          
+
+    </div>
+
+    <div class="col-md-6">
+        <mat-form-field class="w100" appearance="fill">
+            <mat-label>Quiz Time</mat-label>
+            <input [(ngModel)]="quizData.quizTime" type="time" name="quiztime" matInput>
+          </mat-form-field>
+    </div>
+
+
+
+    </div>
+    
+     
+
+</div>
+</div>
+
+
 
 <br/>
 <mat-form-field appearance="fill" class="mt20 w100">
