--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,132 +1,125 @@
-<div class="bootstrap-wrapper">
-
-  
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-    <mat-card>
-    <div class="container text-center">
-        <img style="border-radius: 50%;" src="../../../assets/logo1.jpg" height="150" width="150" alt="logo.png">
-    </div>
-
-                <div class="login-form-flex">
-                  <mat-card>
-                  <form (ngSubmit)="formSubmit()">
-                    <!-- {{loginData|json}} -->
-                    <h1 class="text-center">Login Here!!</h1>
-                    <mat-card-content>
-                      <mat-form-field>
-                        <mat-label>Username</mat-label>
-                        <input 
-                        [(ngModel)]="loginData.username"
-                        name="username"
-                        required
-                        type="text"
-                        matInput placeholder="Username">
-                      </mat-form-field>
-                      <br/>
-                      <mat-form-field>
-                        <mat-label>Password</mat-label>
-                        <input 
-                        [(ngModel)]="loginData.password"
-                        required
-                        name="password"
-                        type="password" matInput placeholder="Password"/>
-                      </mat-form-field>
-                    </mat-card-content>
+<!-- BELOW CONATAINS THE CORRECT CODE -->
 
 
-                    <button type="submit"  [disabled]="isLogingIn" class="button-flex" mat-raised-button color="primary">
-                      <!-- <img *ngIf="isLogingIn" class="spinner" src="../../../assets/images/spinningCircle.gif"> -->
 
-                      <img *ngIf="isLogingIn" class="spinner" src="../../../assets/images/spinner.gif">                    
-                      Login</button>
-              </form>
-             <mat-card-actions>
-              <div class="button-flex-container"> 
-                <!-- <button mat-button color="primary" (click)="Openpopup()" class="" >Forgotten Password?</button> -->
-                <button mat-button color="primary"  (click)="openNew()">Forgotten Password?</button>
-              </div>
-          </mat-card-actions>
-          </mat-card>
-            </div>
-            </mat-card>
-            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <mat-card>
+        <div class="container text-center">
+          <img style="border-radius: 50%;" src="../../../assets/logo1.jpg" height="150" width="150" alt="logo.png">
         </div>
-        <div>
+
+        <div class="login-form-flex">
+          <mat-card>
+            <form (ngSubmit)="formSubmit()">
+              <!-- {{loginData|json}} -->
+              <h1 class="text-center">Login Here!!</h1>
+              <mat-card-content>
+                <mat-form-field>
+                  <mat-label>Username</mat-label>
+                  <input [(ngModel)]="loginData.username" name="username" required type="text" matInput
+                    placeholder="Username">
+                </mat-form-field>
+                <br />
+                <mat-form-field>
+                  <mat-label>Password</mat-label>
+                  <input [(ngModel)]="loginData.password" required name="password" type="password" matInput
+                    placeholder="Password" />
+                </mat-form-field>
+              </mat-card-content>
+
+
+              <button type="submit" [disabled]="isLogingIn" class="button-flex" mat-raised-button color="primary">
+                <!-- <img *ngIf="isLogingIn" class="spinner" src="../../../assets/images/spinningCircle.gif"> -->
+
+                <img *ngIf="isLogingIn" class="spinner" src="../../../assets/images/spinner.gif">
+                Sign in</button>
+            </form>
+            <button type="button" class="login-with-google-btn" (click)="signInWithGoogle()">
+              Sign in with Google
+            </button>
+
+            <!-- <a [routerLink]="['/oauth2/authorization/google']" class="login-with-google-btn">
+                Sign in with Google
+              </a> -->
+
+            <mat-card-actions>
+              <div class="button-flex-container">
+                <!-- <button mat-button color="primary" (click)="Openpopup()" class="" >Forgotten Password?</button> -->
+                <button mat-button color="primary" (click)="openNew()">Forgotten Password?</button>
+              </div>
+            </mat-card-actions>
+          </mat-card>
+        </div>
+      </mat-card>
+    </div>
+  </div>
+  <div>
 
 
 
 
 
-        
-<!-- DIALOG BOX STARTS FROM HERE -->
-<div class="">
-<p-dialog class="resetcontainer" [(visible)]="productDialog" [style]="{width: '60%', height:'1400px'}" header="">
-    <mat-card>
-    <!-- {{resetData |json}} -->
-    <form (ngSubmit)="passwordChange()">
-        <!-- <h1>Fill this form to reset Password</h1> -->
-    <mat-card-content>
-      <h3>Provide theses details to reset Password</h3>
-    <mat-form-field>
+
+    <!-- DIALOG BOX STARTS FROM HERE -->
+    <div class="">
+      <p-dialog class="resetcontainer" [(visible)]="productDialog" [style]="{width: '60%', height:'1400px'}" header="">
+        <mat-card>
+          <!-- {{resetData |json}} -->
+          <form (ngSubmit)="passwordChange()">
+            <!-- <h1>Fill this form to reset Password</h1> -->
+            <mat-card-content>
+              <h3>Provide theses details to reset Password</h3>
+              <mat-form-field>
                 <mat-label>Username</mat-label>
-                <input 
-                [(ngModel)]="resetData.username"
-                required
-                name="username"
-                type="text"
-                 matInput placeholder="Username">
-            </mat-form-field>
-            <mat-form-field>
+                <input [(ngModel)]="resetData.username" required name="username" type="text" matInput
+                  placeholder="Username">
+              </mat-form-field>
+              <mat-form-field>
                 <mat-label>Email</mat-label>
-                <input 
-                [(ngModel)]="resetData.email"
-                name="email"
-                type="text"
-                 matInput placeholder="Email">
-            </mat-form-field>
-            <mat-form-field>
+                <input [(ngModel)]="resetData.email" name="email" type="text" matInput placeholder="Email">
+              </mat-form-field>
+              <mat-form-field>
                 <mat-label>New Password</mat-label>
-                <input 
-                [(ngModel)]="resetData.password"
-                name="newpassword"
-                type="text"
-                 matInput placeholder="New Password">
-            </mat-form-field>
-            <mat-form-field>
+                <input [(ngModel)]="resetData.password" name="newpassword" type="text" matInput
+                  placeholder="New Password">
+              </mat-form-field>
+              <mat-form-field>
                 <mat-label>Confirm Password</mat-label>
-                <input 
-                [(ngModel)]="resetData.confirmPassword"
-                name="confirmPassword"
-                type="text"
-                 matInput placeholder="Confirm Password">
-            </mat-form-field>
-        </mat-card-content>
+                <input [(ngModel)]="resetData.confirmPassword" name="confirmPassword" type="text" matInput
+                  placeholder="Confirm Password">
+              </mat-form-field>
+            </mat-card-content>
 
-    <mat-card-actions>
-    <button type="submit" mat-raised-button color="primary">Reset</button>
-    </mat-card-actions>
+            <mat-card-actions>
+              <button type="submit" mat-raised-button color="primary">Reset</button>
+            </mat-card-actions>
 
 
-    </form>
-</mat-card>
-</p-dialog>
+          </form>
+        </mat-card>
+      </p-dialog>
+    </div>
+    <!-- DIALOG BOX ENDS HERE -->
+  </div>
+
 </div>
-<!-- DIALOG BOX ENDS HERE -->
-    </div>
-
-    </div>
- 
-    
-
-
-
-
-
-
-
-
-
-
-    
