--- a/src/app/pages/user/start/start.component.css
+++ b/src/app/pages/user/start/start.component.css
@@ -1,3 +1,34 @@
+
+
+  /* subjective questions card */
+  .prefix-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+  }
+
+
+  .mat-form-field {
+    width: 100%;
+}
+  
+  /* .prefix-item {
+    display: flex;
+    align-items: center;
+  } */
+  /* subjective questions card */
+
+
+
+
+
+
+
+
+
+
+
+
 #quiztitle{
     text-decoration: underline;
 }
