--- a/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.css
+++ b/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.css
@@ -1,3 +1,17 @@
 .mt10{
     margin-top: 10px;
 }
+
+
+mat-card {
+    margin: 10px 0;
+  }
+  
+  .mat-card-content p {
+    margin: 5px 0; /* Adjust the margin as needed */
+  }
+  
+  .mat-card-header {
+    padding-bottom: 0; /* Reduce the padding if needed */
+  }
+  
