--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -56,14 +56,14 @@
                     </ng-container>
 
 
-               <div *ngIf="questions">
+                    <div *ngIf="questions">
 
-                    <mat-card class="cards"
-                        style=" font-size:20px; color: white;text-align: center; background-color: purple;">
-                        SECTION A
+                        <mat-card class="cards"
+                            style=" font-size:20px; color: white;text-align: center; background-color: purple;">
+                            SECTION A
 
-                    </mat-card>
-                </div>
+                        </mat-card>
+                    </div>
 
 
                     <mat-card
@@ -174,7 +174,6 @@
                     <div *ngIf="currentQuestions; else elseBlock">
                         <mat-card>
                             <!-- {{resetData |json}} -->
-
                             <mat-card class="cards"
                                 style=" font-size:20px; color: white;text-align: center; background-color: purple;">
                                 SECTION B
@@ -211,12 +210,12 @@
                                     <mat-card-content class="mat-card-content">
                                         <input type="checkbox" [checked]="question.selected"
                                             (change)="onQuestionSelect(question)" disabled hidden>
-                                        <mat-form-field class="mat-form-field">
+                                        <mat-form-field class="mat-form-field"  style="margin-top: -450px;">
                                             <mat-label>
-                                                {{question.id}} {{ question.text }} {{question.marks}}
+                                                {{question.quesNo}} {{ question.question }} {{question.marks}}
                                             </mat-label>
                                             <input class="input" name="givenAnswer" [(ngModel)]="question.givenAnswer"
-                                                required type="text" matInput>
+                                                 type="text" matInput>
 
                                         </mat-form-field>
                                     </mat-card-content>
@@ -375,4 +374,7 @@
     </div>
 
 
+
 </div>
+
+<!-- {{groupedQuestions | json}} -->
